--- a/views/food/index.ejs
+++ b/views/food/index.ejs
@@ -14,6 +14,6 @@
       <li><a href="/food/<%= food._id%>"><%= food.name %></a></li>
     <% })  %>  
       </ul>
-    <a href="/food/new">Add New Fruit</a>
+    <a href="/food/new">Add New Food</a>
   </body>
 </html>
